versioned_docs/version-3.0/event-feed.md
---
title: "Event feed"
description: "Monitor and analyze user activity with Adapty’s event feed."
metadataTitle: "Event Feed Overview | Adapty Docs"
---

import Zoom from 'react-medium-image-zoom';
import 'react-medium-image-zoom/dist/styles.css';

Event feed allows you to visually track [Events](events) generated by Adapty and check the status of their export to 3rd-party integrations, including the webhook. 

:::warning

Keep in mind that transactions created using the [server-side API (version 1)](server-side-api-specs-legacy#requests) do not appear in the **Event Feed**. To ensure they are included, use the [server-side API (version 2)](ss-set-transaction) instead.

:::

<Zoom>
  <img src={require('./img/event-status.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

<p> </p>

:::note
AppsFlyer, Facebook Ads, and Branch sending status could be inaccurate because they do not always return errors when they occur.
:::

To view the profile of the user who has initiated the transaction, click the **View Profile** button in the event details.